--- a/README
+++ b/README
@@ -1,5 +1,8 @@
+
 sublime text2 插入日期插件
 
+@date    2012-02-18
+@link    http://www.fantxi.com/blog/
 
 安装：
 1. 把insert-datetime解压到：文件夹 Sublime Text2\Data\Packages\ 内
